    set mysqlnd.net_cmd_buffer_size to at least 9000. (Andrey)
  . Fixed bug #54674 mysqlnd valid_sjis_(head|tail) is using invalid operator
    and range). (nihen at megabbs dot com, Andrey)

- OpenSSL extension
  . Fixed bug #54992 (Stream not closed and error not returned when SSL
    CN_match fails). (Gustavo, laird_ngrps at dodo dot com dot au)

- PDO extension:
  . Fixed bug #54929 (Parse error with single quote in sql comment). (Felipe)
  . Fixed bug #52104 (bindColumn creates Warning regardless of ATTR_ERRMODE 
    settings). (Ilia)
    
- PDO DBlib driver:
  . Fixed bug #54167 (PDO_DBLIB returns null on SQLUNIQUE field).
    (mjh at hodginsmedia dot com, Felipe)

- PDO MySQL driver:
  . Fixed bug #54644 (wrong pathes in php_pdo_mysql_int.h). (Tony, Johannes)
  . Fixed bug #53782 (foreach throws irrelevant exception). (Johannes, Andrey)
  . Implemented FR #48587 (MySQL PDO driver doesn't support SSL connections).
    (Rob)

- PDO PostgreSQL driver:
  . Fixed bug #54318 (Non-portable grep option used in PDO pgsql
    configuration). (bwalton at artsci dot utoronto dot ca)

- PDO Oracle driver:
  . Fixed bug #44989 (64bit Oracle RPMs still not supported by pdo-oci).
    (jbnance at tresgeek dot net)

- Phar extension:
  . Fixed bug #54395 (Phar::mount() crashes when calling with wrong parameters).
    (Felipe)

- SOAP extension:
  . Fixed bug #54312 (soap_version logic bug). (tom at samplonius dot org)

- Sockets extension:
  . Fixed stack buffer overflow in socket_connect(). (CVE-2011-1938)
    Found by Mateusz Kocielski, Marek Kroemeke and Filip Palian. (Felipe)
  . Changed socket_set_block() and socket_set_nonblock() so they emit warnings
    on error. (Gustavo)
  . Fixed bug #51958 (socket_accept() fails on IPv6 server sockets). (Gustavo)

- SPL extension:
  . Fixed bug #54970 (SplFixedArray::setSize() isn't resizing). (Felipe)
  . Fixed bug #54609 (Certain implementation(s) of SplFixedArray cause hard
    crash). (Felipe)