@@ -125,6 +125,10 @@ PHP                                                                        NEWS
   . Fixed bug #54992 (Stream not closed and error not returned when SSL
     CN_match fails). (Gustavo, laird_ngrps at dodo dot com dot au)
 
+- Oracle Database extension (OCI8):
+  . Added oci_client_version() returning the runtime Oracle client library
+    version (Chris Jones)
+
 - PDO extension:
   . Fixed bug #54929 (Parse error with single quote in sql comment). (Felipe)
   . Fixed bug #52104 (bindColumn creates Warning regardless of ATTR_ERRMODE 
